Update Analyzing loan approvals in Python over CSV data.ipynb

--- a/notebooks/Analyzing loan approvals in Python over CSV data.ipynb
+++ b/notebooks/Analyzing loan approvals in Python over CSV data.ipynb
@@ -252,7 +252,7 @@
        "</style>\n",
        "\n",
        "<div id=\"controlsid13ec1026-59b3-11e8-855e-002590fb7074\" class=\"brunel\"/>\n",
-       "<svg id=\"visid13ec066c-59b3-11e8-855e-002590fb7074\" width=\"200\" height=\"300\"></svg>"
+       "<svg id=\"visid13ec066c-59b3-11e8-855e-002590fb7074\?sanitize=true" width=\"200\" height=\"300\"></svg>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
