Update Analyzing loan approvals in Python over CSV data.ipynb
Typo fix

--- a/notebooks/Analyzing loan approvals in Python over CSV data.ipynb
+++ b/notebooks/Analyzing loan approvals in Python over CSV data.ipynb
@@ -8,7 +8,7 @@
     "## Analyzing your decisions in Python with Panda and Brunel\n",
     "\n",
     "This Python 2.10 notebook shows how to load a decision set produced by IBM ODM, and how to apply analytics with Brunel library to get insights on the decisions.\n",
-    "The decision set has been automated by running business rules on randomly generated loan applications. The decision set has been writtern in a CSV format. \n",
+    "The decision set has been automated by running business rules on randomly generated loan applications. The decision set has been written in a CSV format. \n",
     "\n",
     "This notebook has been developed with a Panda dataframe and runs on Spark 2.0. \n",
     "\n",
