--- a/notebooks/CallRESPython.ipynb
+++ b/notebooks/CallRESPython.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -22,19 +22,19 @@
       "/home/jovyan/work\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  4146  100  4146    0     0  14967      0 --:--:-- --:--:-- --:--:-- 14967\n",
+      "100  4146  100  4146    0     0  37690      0 --:--:-- --:--:-- --:--:-- 38036\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 14663  100 14663    0     0  54712      0 --:--:-- --:--:-- --:--:-- 54712\n",
+      "100 14663  100 14663    0     0  66348      0 --:--:-- --:--:-- --:--:-- 66348\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 32796  100 32796    0     0   307k      0 --:--:-- --:--:-- --:--:--  310k\n",
+      "100 32796  100 32796    0     0   232k      0 --:--:-- --:--:-- --:--:--  232k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 13.7M  100 13.7M    0     0  1378k      0  0:00:10  0:00:10 --:--:-- 1177k\n",
+      "100 13.7M  100 13.7M    0     0  2042k      0  0:00:06  0:00:06 --:--:-- 1834k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 8918k  100 8918k    0     0  1311k      0  0:00:06  0:00:06 --:--:-- 1464k\n"
+      "100 8918k  100 8918k    0     0   593k      0  0:00:15  0:00:15 --:--:--  272k74 8918k   74 6645k    0     0   699k      0  0:00:12  0:00:09  0:00:03  645k\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
      "text": [
       "Decision Executions return this parameters : \n",
       "ilog.rules.firedRulesCount corresponds to 1\n",
-      "loan corresponds to miniloan.Loan@df01536\n",
+      "loan corresponds to miniloan.Loan@56d7d6d8\n",
       "Nb of Rules fire :  1\n",
       "Loan Approved :  False\n",
       "Loan Message :  ['The loan cannot exceed 1,000,000']\n"
@@ -79,13 +79,15 @@
    ],
    "source": [
     "def CreateODMSession(sc):\n",
-    "    factoryConfig = sc._jvm.ilog.rules.res.session.IlrJ2SESessionFactory.createDefaultConfig()\n",
-    "    xuConfig = factoryConfig.getXUConfig();\n",
-    "    xuConfig.setLogAutoFlushEnabled(True);\n",
-    "    xuConfig.getPersistenceConfig().setPersistenceType(sc._jvm.ilog.rules.res.session.config.IlrPersistenceType.MEMORY);\n",
-    "    xuConfig.getManagedXOMPersistenceConfig().setPersistenceType(sc._jvm.ilog.rules.res.session.config.IlrPersistenceType.MEMORY);\n",
-    "    factory=sc._jvm.ilog.rules.res.session.IlrJ2SESessionFactory(factoryConfig)\n",
-    "    return factory\n",
+    "    if not hasattr(CreateODMSession, \"fac\"):\n",
+    "        factoryConfig = sc._jvm.ilog.rules.res.session.IlrJ2SESessionFactory.createDefaultConfig()\n",
+    "        xuConfig = factoryConfig.getXUConfig();\n",
+    "        xuConfig.setLogAutoFlushEnabled(True);\n",
+    "        xuConfig.getPersistenceConfig().setPersistenceType(sc._jvm.ilog.rules.res.session.config.IlrPersistenceType.MEMORY);\n",
+    "        xuConfig.getManagedXOMPersistenceConfig().setPersistenceType(sc._jvm.ilog.rules.res.session.config.IlrPersistenceType.MEMORY);\n",
+    "        CreateODMSession.fac=sc._jvm.ilog.rules.res.session.IlrJ2SESessionFactory(factoryConfig)    \n",
+    "    return CreateODMSession.fac\n",
+    "\n",
     "\n",
     "\n",
     "factory=CreateODMSession(sc)\n",
@@ -95,6 +97,7 @@
     "sessionRequest.setRulesetPath(sc._jvm.ilog.rules.res.model.IlrPath.parsePath(\"/miniloanruleapp/1.0/miniloanrules/1.0\"));\n",
     "# Ensure latest version of the ruleset is taken into account\n",
     "sessionRequest.setForceUptodate(True);\n",
+    "\n",
     "# Set the input parameters for the execution of the rules\n",
     "inputParameters = sc._jvm.java.util.HashMap();\n",
     "\n",
@@ -103,6 +106,7 @@
     "loan.setAmount(6000000)\n",
     "loan.setDuration(1000)\n",
     "loan.setYearlyInterestRate(0.05)\n",
+    "\n",
     "\n",
     "inputParameters[\"loan\"]=loan\n",
     "inputParameters[\"borrower\"]=borrower\n",
